# clipboardrs

./: Cargo.toml
src/: api.rs  lib.rs  listener.rs  main.rs  windows.rs
