[package]
name = "clipboardrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "clipboardrs"
crate-type = ["lib"]

[dependencies]
clipboard-win = "4.5.0"
image = "0.24.6"
arboard = "3.2.0"
winapi = "0.3.9"